--- a/drawers/drawers.css
+++ b/drawers/drawers.css
@@ -2,6 +2,15 @@
     height: 100%;
 }
 
+.flex {
+    display: flex;
+}
+
+main {
+    padding-left: 1rem;
+}
+
+
 /* Place drawer and content side by side. */
 .demo-body {
     display: flex;
@@ -25,3 +34,14 @@
 .demo-main {
     padding-left: 16px;
 } 
+
+/* 
+.demo-body2 {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    min-height: 100%;
+} */
+
